--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".GpsInfo"></activity>
+
+        <activity android:name=".MainActivity"/>
+
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".GpsInfo" />
         <activity android:name=".GpsActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -35,13 +39,13 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
