--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,14 @@
 
         <activity android:name=".MainActivity"/>
 
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".GpsInfo" />
-        <activity android:name=".GpsActivity" />
+        <activity android:name=".HomeActivity">
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -39,12 +44,6 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
