--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,13 @@
         tools:replace="android:appComponentFactory">
         <activity android:name=".WelcomeActivity">
 
-        </activity>
-        <activity android:name=".MainActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" ></activity>
         <activity android:name=".HomeActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
