지원이 승우 윤현이

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,15 @@
         tools:replace="android:appComponentFactory">
         <activity android:name=".WelcomeActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
-        <activity android:name=".MainActivity" ></activity>
+        <activity android:name=".MainActivity" >
+
+        </activity>
         <activity android:name=".HomeActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -45,10 +48,14 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps">
+
+        </activity>
 
         <activity android:name=".ParkInfoActivity"></activity>
-        <activity android:name=".FitActivity"></activity>
+        <activity android:name=".FitActivity">
+
+        </activity>
     </application>
 
 </manifest>
