--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,16 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
         <activity android:name=".WelcomeActivity">
+
+        </activity>
+        <activity android:name=".MainActivity" ></activity>
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" ></activity>
-        <activity android:name=".HomeActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -48,10 +50,10 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
 
+
         </activity>
 
         <activity android:name=".ParkInfoActivity"></activity>
-        <activity android:name=".FitActivity"></activity>
     </application>
 
 </manifest>
